[package]
name = "chaos-provider"
description = "Nele's provider chaos"
authors = ["nlea <nele@fiberplane.com>"]
edition = "2021"
version = "1.0.0"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
fiberplane-models = { version = "=1.0.0-beta.1" }
fiberplane-pdk = { version = "=1.0.0-beta.1" }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
vergen = { version = "8.3", default-features = false, features = [ "build", "git", "gitcl" ]}
